--- a/gallery.html
+++ b/gallery.html
@@ -41,9 +41,8 @@
   <nav class="nav-menu flex-row">
     <div class="nav-brand">
       <a href="index.html"><img src="https://i.ibb.co/hcskmyL/tcg-logo-tiny.png" alt="tcg-logo-tiny" border="0"></a>
-
   </div>
-  <h1><a href="index.html"><img src="./images/tgc_blue.png" alt="tcg-logo-tiny" border="0"></a></h1>
+    <h1>TGC</h1>
   <div class="element">
     <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
@@ -57,7 +56,6 @@
         <i class="fas fa-bars"></i>
       </a>
   </div>
-
 </nav>
 
 <!--x- Navigation -x-->
@@ -101,7 +99,7 @@
  </div>
 </main>
 
-<h4><i>This page is currently under consctruction. Please come back later to see the full gallery!</i></h4>
+<h4>This page is currently under consctruction. Please come back later to see the full gallery!</h4>
 
 <!---footer--->
 <footer class="sticky-footer">
