--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 <nav class="nav">
   <nav class="nav-menu flex-row">
     <div class="nav-brand">
-      <a href="index.html"><img src="https://i.ibb.co/hcskmyL/tcg-logo-tiny.png" alt="tcg-logo-tiny" border="0"></a>
-
+    <a href="index.html"><img src="https://i.ibb.co/hcskmyL/tcg-logo-tiny.png" alt="tcg-logo-tiny" border="0"></a>
   </div>
-  <h1><a href="index.html"><img src="./images/tgc_blue.png" alt="tcg-logo-tiny" border="0"></a></h1>
+  <h1>TGC</h1>
   <div class="element">
     <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
@@ -76,7 +75,7 @@
 
 <!---footer--->
 <footer class="sticky-footer">
-<p>© 2021 TGC | Built by OB</p>
+<p>© 2021 TCG | Built by OB</p>
 </footer>
 
 
