--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
       <a href="index.html"><img src="https://i.ibb.co/hcskmyL/tcg-logo-tiny.png" alt="tcg-logo-tiny" border="0"></a>
 
   </div>
-  <h1><a href="index.html"><img src="./images/tgc_blue.png" alt="tcg-logo-tiny" border="0"></a></h1>
+    <h1>TGC</h1>
   <div class="element">
     <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
