--- a/contact.html
+++ b/contact.html
@@ -66,15 +66,15 @@
 <!-- Main site -->
 <main>
   <section id="about">
-              <h2>Contact</h2>
+              <h2>Contact Us</h2>
               <div class="container">
                 <form action="action_page.php">
 
-                  <label for="fname">First Name</label>
+                  <label for="fname">Name</label>
                   <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-                  <label for="lname">Last Name</label>
-                  <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                  <label for="mail">Email</label>
+                  <input type="text" id="mail" name="mail" placeholder="Your email address">
 
                   <label for="inquire">Inquiry</label>
                   <select id="inquire" name="inquire">
