--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 <section class="site-title">
   <div class="site-background"></div>
-  <h1>Think. Create. Grow.</h1>
-  <h3><i>Exploring creativity from all angles</i></h3>
+  <h1>Think. Grow. Create.</h1>
+  <h3>Exploring creativity from all angles</h3>
     <button class="btn"><a href="about.html">Learn More</a></button>
 </section>
 
