containers added for text, fixing issues with gallery and services pages (js)

--- a/services.html
+++ b/services.html
@@ -65,10 +65,10 @@
 
 <!-- Main site -->
 <h2>Services</h2>
-  <div class="container">
+  <div class="services">
               	<div class="cards">
               		<a class="card" href="#">
-              			<span class="card-header" style="background-image: url(#);">
+              			<span class="card-header" style="background-image: url(https://i.ibb.co/mctmq5T/media.jpg);">
               				<span class="card-title">
               					<h3>Social Media Advertising</h3>
               				</span>
@@ -124,8 +124,6 @@
               		</a>
                 </div>
               </div>
-
-          <div class="about-content">
 
 
 <!---footer--->
