--- a/about.html
+++ b/about.html
@@ -65,19 +65,17 @@
 
 <!-- Main site -->
 <main>
-  <section id="about">
-              <h2><i>Our Vision</i></h2>
-
-          <div class="about-content">
-            <div>
+  <!-- <section id="about">
+          <div class="about-content"> -->
                 <figure>
                   <img src="https://i.ibb.co/jr7PD36/tcg-ryan.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
                   <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
                   </figure>
-                <p>At TGC we don’t just consider ourselves the creatives, but we understand that entrepreneurs are innovators and creators themselves. We don’t like to separate things into creatives and business, but two sides of the same coin. So we want a community of creatives, entrepreneurs, and strategists all working together to get results where we all win. Whether a client or coworker, your mission is our mission. And with all that creative energy working towards one goal, success is only the beginning.
-	As a Floridian company, our goal is the growth and innovation of businesses in the central Florida area. We see the potential for Florida to be a major force for business & innovation and we want to help speed it along. And as we expand we want to do the same for other cities as well. When companies grow, the city grows with it & so we take growth very seriously. We will always look at every business as more than a client, but a pillar of our beloved city.
-</p>
+                <div style="background-color:#f4f4ff; text-align: justify; vertical-align: middle; padding:10% 10%;"><h2>Our Vision</h2> At TGC, we are creatives, entrepreneurs, and innovators. We seek to merge creativity and business in practical, meaningful ways. We are looking to build a community of artists, businesses, and strategists working together towards the same goal: to fortify and enrich our community's blossoming creative spaces. Whether you're a client or collaborator, TGC will work with you to deliver a high quality product that fufills both artistic desire and functionality in this highly competitive industry.
+<button class="btn" style="background-color: #ffffff; text-align: justify; vertical-align: middle; padding:20px 20px;"><a href="gallery.html">Explore Sample Works</a></button>
             </div>
+
+          </div>
 </section>
 </main>
 
