--- a/gallery.html
+++ b/gallery.html
@@ -63,43 +63,86 @@
 <!-- Main site -->
 <main>
 
-  <!-- Slideshow container -->
- <div class="slideshow-container">
+  <!-- Container for the image gallery -->
+  <div class="container">
 
-   <!-- Full-width images with number and caption text -->
-   <div class="mySlides fade">
-     <div class="numbertext">1 / 3</div>
-     <img src="tcg_1.jpg" style="width:100%">
-     <div class="text">Caption Text</div>
-   </div>
+    <!-- Full-width images with number text -->
+    <div class="mySlides">
+      <div class="numbertext">1 / 6</div>
+        <img src="img_woods_wide.jpg" style="width:100%">
+    </div>
 
-   <div class="mySlides fade">
-     <div class="numbertext">2 / 3</div>
-     <img src="tcg_2.jpg" style="width:100%">
-     <div class="text">Caption Two</div>
-   </div>
+    <div class="mySlides">
+      <div class="numbertext">2 / 6</div>
+        <img src="img_5terre_wide.jpg" style="width:100%">
+    </div>
 
-   <div class="mySlides fade">
-     <div class="numbertext">3 / 3</div>
-     <img src="tcg_3.jpg" style="width:100%">
-     <div class="text">Caption Three</div>
-   </div>
+    <div class="mySlides">
+      <div class="numbertext">3 / 6</div>
+        <img src="img_mountains_wide.jpg" style="width:100%">
+    </div>
 
-   <!-- Next and previous buttons -->
-   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-   <a class="next" onclick="plusSlides(1)">&#10095;</a>
- </div>
- <br>
+    <div class="mySlides">
+      <div class="numbertext">4 / 6</div>
+        <img src="img_lights_wide.jpg" style="width:100%">
+    </div>
 
- <!-- The dots/circles -->
- <div style="text-align:center">
-   <span class="dot" onclick="currentSlide(1)"></span>
-   <span class="dot" onclick="currentSlide(2)"></span>
-   <span class="dot" onclick="currentSlide(3)"></span>
- </div>
-</main>
+    <div class="mySlides">
+      <div class="numbertext">5 / 6</div>
+        <img src="img_nature_wide.jpg" style="width:100%">
+    </div>
 
-<h4>This page is currently under consctruction. Please come back later to see the full gallery!</h4>
+    <div class="mySlides">
+      <div class="numbertext">6 / 6</div>
+        <img src="img_snow_wide.jpg" style="width:100%">
+    </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    <!-- Image text -->
+    <div class="caption-container">
+      <p id="caption"></p>
+    </div>
+
+    <!-- Thumbnail images -->
+    <div class="row">
+      <div class="column">
+        <img class="demo cursor" src="./images/alex1.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="./images/alex2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="./images/amanda1.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="./images/amanda2.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="./images/amanda3.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="./images/bri.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="./images/eric.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="./images/olive.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="./images/sabrina.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div><div class="column">
+        <img class="demo cursor" src="./images/sav1.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div><div class="column">
+        <img class="demo cursor" src="./images/sav2.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div><div class="column">
+        <img class="demo cursor" src="./images/sav3.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      </div>
+    </div>
+  </div>
 
 <!---footer--->
 <footer class="sticky-footer">
