--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
 
 <section class="site-title">
   <div class="site-background"></div>
+
   <h1>Think. Grow. Create.</h1>
-    <button class="btn"><a href="about.html">Learn More</a></button>
+
+<button class="btn"><a href="about.html">Learn More</a></button>
 </section>
+<div style="background-color:#f4f4ff; text-align: justify; vertical-align: middle; padding:10% 10%;"><h2>Looking to connect?</h2><p>TGC is always looking for new artists, designers, photographers, and businesses to collaborate with. If youre interested in working with TGC, please contact us via <a href="contact.html" style="font-weight:bold">this form</a> on the Contact page.</p>
+</div>
 
 </main>
 
