MANY formatting issues like padding, code cleanup, text and font change

--- a/gallery.html
+++ b/gallery.html
@@ -62,39 +62,64 @@
 
 <!-- Main site -->
 <main>
+  <h2>Image Gallery</h2>
 
   <!-- Container for the image gallery -->
-  <div class="container">
+  <div class="container g-container">
 
     <!-- Full-width images with number text -->
     <div class="mySlides">
-      <div class="numbertext">1 / 6</div>
-        <img src="img_woods_wide.jpg" style="width:100%">
+      <div class="numbertext"></div>
+        <img src="./images/alex1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2 / 6</div>
-        <img src="img_5terre_wide.jpg" style="width:100%">
+      <div class="numbertext"></div>
+        <img src="./images/alex2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3 / 6</div>
-        <img src="img_mountains_wide.jpg" style="width:100%">
+      <div class="numbertext"></div>
+        <img src="./images/amanda1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4 / 6</div>
-        <img src="img_lights_wide.jpg" style="width:100%">
+      <div class="numbertext"></div>
+        <img src="./images/amanda2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">5 / 6</div>
-        <img src="img_nature_wide.jpg" style="width:100%">
+      <div class="numbertext"></div>
+        <img src="./images/amanda3.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">6 / 6</div>
-        <img src="img_snow_wide.jpg" style="width:100%">
+      <div class="numbertext"></div>
+        <img src="./images/bri.jpg" style="width:100%">
+    </div>
+    <div class="mySlides">
+      <div class="numbertext"></div>
+        <img src="./images/eric.jpg" style="width:100%">
+    </div>
+    <div class="mySlides">
+      <div class="numbertext"></div>
+        <img src="./images/olive.jpg" style="width:100%">
+    </div>
+    <div class="mySlides">
+      <div class="numbertext"></div>
+        <img src="./images/sabrina.jpg" style="width:100%">
+    </div>
+    <div class="mySlides">
+      <div class="numbertext"></div>
+        <img src="./images/sav1.jpg" style="width:100%">
+    </div>
+    <div class="mySlides">
+      <div class="numbertext"></div>
+        <img src="./images/sav2.jpg" style="width:100%">
+    </div>
+    <div class="mySlides">
+      <div class="numbertext"></div>
+        <img src="./images/sav3.jpg" style="width:100%">
     </div>
 
     <!-- Next and previous buttons -->
@@ -109,45 +134,48 @@
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="./images/alex1.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+        <img class="demo cursor" src="./images/alex1.jpg" style="width:100%" onclick="currentSlide(1)" alt="1/12">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./images/alex2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+        <img class="demo cursor" src="./images/alex2.jpg" style="width:100%" onclick="currentSlide(2)" alt="2/12">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./images/amanda1.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+        <img class="demo cursor" src="./images/amanda1.jpg" style="width:100%" onclick="currentSlide(3)" alt="3/12">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./images/amanda2.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/amanda2.jpg" style="width:100%" onclick="currentSlide(4)" alt="4/12">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./images/amanda3.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/amanda3.jpg" style="width:100%" onclick="currentSlide(4)" alt="5/12">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./images/bri.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/bri.jpg" style="width:100%" onclick="currentSlide(4)" alt="6/12">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./images/eric.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/eric.jpg" style="width:100%" onclick="currentSlide(4)" alt="7/12">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./images/olive.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/olive.jpg" style="width:100%" onclick="currentSlide(4)" alt="8/12">
       </div>
       <div class="column">
-        <img class="demo cursor" src="./images/sabrina.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/sabrina.jpg" style="width:100%" onclick="currentSlide(4)" alt="9/12">
       </div><div class="column">
-        <img class="demo cursor" src="./images/sav1.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/sav1.jpg" style="width:100%" onclick="currentSlide(4)" alt="10/12">
       </div><div class="column">
-        <img class="demo cursor" src="./images/sav2.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/sav2.jpg" style="width:100%" onclick="currentSlide(4)" alt="11/12">
       </div><div class="column">
-        <img class="demo cursor" src="./images/sav3.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="./images/sav3.jpg" style="width:100%" onclick="currentSlide(4)" alt="12/12">
       </div>
     </div>
   </div>
+
+  </main>
 
 <!---footer--->
 <footer class="sticky-footer">
 <p>© 2021 TGC | Built by OB</p>
 </footer>
 
+<script src="./script.js"></script>
 </body>
 </html>
