--- a/services.html
+++ b/services.html
@@ -63,68 +63,43 @@
 
 <!--x- Navigation -x-->
 
-<!-- Main site -->
+<!-- Main site cards -->
+
+
 <h2>Services</h2>
-  <div class="services">
-              	<div class="cards">
-              		<a class="card" href="#">
-              			<span class="card-header" style="background-image: url(https://i.ibb.co/mctmq5T/media.jpg);">
-              				<span class="card-title">
-              					<h3>Social Media Advertising</h3>
-              				</span>
-              			</span>
-              			<span class="card-summary">
-              				We help clients come up with a strategy for campaigns, creating the perfect ads for client needs. We manage the ads for Facebook & Instagram and optimize them for success. This plan is a mixture of all of our services from creative to strategy and is ongoing monthly with results reporting. We recommend a 90 day commitment for best results.
-              			</span>
-              			<span class="card-meta">
-              				Prices vary
-              			</span>
-              		</a>
-
-                  <a class="card" href="#">
-              			<span class="card-header" style="background-image: url(#);">
-              				<span class="card-title">
-              					<h3>Video Production</h3>
-              				</span>
-              			</span>
-              			<span class="card-summary">
-              			We will provide a professional crew to film for events, launches, commercials, and more. We bring a team of industry leading filmmakers together to help you achieve the highest quality media content.
-              			</span>
-              			<span class="card-meta">
-              				Prices vary
-              			</span>
-              		</a>
-
-                  <a class="card" href="#">
-              			<span class="card-header" style="background-image: url(#);">
-              				<span class="card-title">
-              					<h3>Photography</h3>
-              				</span>
-              			</span>
-              			<span class="card-summary">
-                      Our main focus is commercial, fashion, and portrait photography. We put an emphasis on conceptual shoots and editorial photography.
-              			</span>
-              			<span class="card-meta">
-              				Prices vary
-              			</span>
-              		</a>
-
-                  <a class="card" href="#">
-              			<span class="card-header" style="background-image: url(#);">
-              				<span class="card-title">
-              					<h3>Course Creation</h3>
-              				</span>
-              			</span>
-              			<span class="card-summary">
-                      Whether you’re a veteran in the digital product arena, or looking to take your first step into it, We can help you create your next online course. We help to organize lesson plans and edit the films to provide as much clarity as possible. (This is obviously a subset of video production but it is more expensive and niche so we want to let people know specifically that this is a specialty).
-              			</span>
-              			<span class="card-meta">
-              				Prices vary
-              			</span>
-              		</a>
-                </div>
-              </div>
-
+<main>
+<div class="card">
+  <img src="./images/media.jpg" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Social Media Advertising</b></h4>
+    <p>We help clients come up with a strategy for campaigns, creating the perfect ads for client needs. We manage the ads for Facebook & Instagram and optimize them for success. This plan is a mixture of all of our services from creative to strategy and is ongoing monthly with results reporting. We recommend a 90 day commitment for best results.
+</p>
+  </div>
+</div>
+<div class="card">
+  <img src="./images/production.jpg" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Video Production</b></h4>
+    <p>We will provide a professional crew to film for events, launches, commercials, and more. We bring a team of industry leading filmmakers together to help you achieve the highest quality media content.
+</p>
+  </div>
+</div>
+<div class="card">
+  <img src="./images/photo.jpg" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Photography</b></h4>
+    <p>Our main focus is commercial, fashion, and portrait photography. We put an emphasis on conceptual shoots and editorial photography.
+</p>
+  </div>
+</div>
+<div class="card">
+  <img src="./images/courses.jpg" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Course Creation</b></h4>
+    <p>TGC can help you create your next online course by organizing lesson plans and editing films. We strive to provide as much clarity as possible. </p>
+  </div>
+</div>
+</main>
 
 <!---footer--->
 <footer class="sticky-footer">
