--- a/about.html
+++ b/about.html
@@ -65,18 +65,20 @@
 
 <!-- Main site -->
 <main>
-  <!-- <section id="about">
-          <div class="about-content"> -->
-                <figure>
-                  <img src="https://i.ibb.co/jr7PD36/tcg-ryan.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
-                  <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
-                  </figure>
-                <div style="background-color:#f4f4ff; text-align: justify; vertical-align: middle; padding:10% 10%;"><h2>Our Vision</h2> At TGC, we are creatives, entrepreneurs, and innovators. We seek to merge creativity and business in practical, meaningful ways. We are looking to build a community of artists, businesses, and strategists working together towards the same goal: to fortify and enrich our community's blossoming creative spaces. Whether you're a client or collaborator, TGC will work with you to deliver a high quality product that fufills both artistic desire and functionality in this highly competitive industry.
-<button class="btn" style="background-color: #ffffff; text-align: justify; vertical-align: middle; padding:20px 20px;"><a href="gallery.html">Explore Sample Works</a></button>
-            </div>
+<div style="background-color:#f4f4ff; text-align: justify; vertical-align: middle; padding:10% 10%;"><h2>Our Vision</h2><p>At TGC, we are creatives, entrepreneurs, and innovators. We seek to merge creativity and business in practical, meaningful ways. We are looking to build a community of artists, businesses, and strategists working together towards the same goal: to fortify and enrich our community's blossoming creative spaces. Whether you're a client or collaborator, TGC will work with you to deliver a high quality product that fufills both artistic desire and functionality in this highly competitive industry.</p>
+</div>
 
-          </div>
-</section>
+<div style="background-color:#8bbbc0; text-align: center; vertical-align: middle; padding:10% 10%;"><button class="btn" style="background-color: #ffffff; text-align: justify; vertical-align: middle; padding:20px 20px;"><a href="gallery.html">Explore Sample Works</a></button></div>
+
+<div style="background-color:#588f95; text-align: center; vertical-align: middle; padding:10% 10%;"><button class="btn" style="background-color: #ffffff; text-align: justify; vertical-align: middle; padding:20px 20px;"><a href="services.html">Services</a></button></div>
+
+<!-- <div style="background-color:#cce5e7; text-align: center; vertical-align: middle; padding:10% 10%;"><h2>Meet the Owner</h2>
+<img src="./images/tcg_1.jpg" alt="The owner on set">
+</div> -->
+<h2>Meet the Owner</h2><img class="lightbox" src="./images/ryan.jpg"/>
+<p>Founder Ryan S. is a lifelong artist who is dedicated to providing the highest quality multimedia services. With a background in film, photography, and editing, Ryan knows how to assemble the perfect creative team for any job. </p>
+
+
 </main>
 
 <!---footer--->
