fixing lightbox issue, preparing to host

--- a/about.html
+++ b/about.html
@@ -75,7 +75,8 @@
 <!-- <div style="background-color:#cce5e7; text-align: center; vertical-align: middle; padding:10% 10%;"><h2>Meet the Owner</h2>
 <img src="./images/tcg_1.jpg" alt="The owner on set">
 </div> -->
-<h2>Meet the Owner</h2><img class="lightbox" src="./images/ryan.jpg"/>
+<h2>Meet the Owner</h2>
+<img class="lightbox" src="./images/ryan.jpg"/>
 <p>Founder Ryan S. is a lifelong artist who is dedicated to providing the highest quality multimedia services. With a background in film, photography, and editing, Ryan knows how to assemble the perfect creative team for any job. </p>
 
 
@@ -85,7 +86,9 @@
 <footer class="sticky-footer">
 <p>© 2021 TGC | Built by OB</p>
 </footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./js/lightbox.js"></script>
+<script src="./js/script.js"></script>
 
-<script src="./script.js"></script>
 </body>
 </html>
