--- a/gallery.html
+++ b/gallery.html
@@ -176,6 +176,7 @@
 <p>© 2021 TGC | Built by OB</p>
 </footer>
 
-<script src="./script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
