--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
 
 
-<script src="./script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
